--- a/superstition.html
+++ b/superstition.html
@@ -13,16 +13,16 @@
   <header>
     <div class="heading"><h1>সিরাতে মুস্তাকিম</h1></div>
     <nav class="nav_bar">
-      <a href="../index.html">
+      <a href="index.html">
       <span id="menu_bar" class="material-symbols-outlined">
         menu
         </span>
       </a>
       <ul>
-         <li><a href="../index.html">মূলপাতা</a></li>
-         <li><a href="../file/contact.html">যোগাযোগ</a></li>
-         <li><a href="../index.html">বিভাগসমূহ</a></li>
-         <li><a href="../index.html">বিষয়সমূহ</a></li>
+         <li><a href="index.html">মূলপাতা</a></li>
+         <li><a href="contact.html">যোগাযোগ</a></li>
+         <li><a href="index.html">বিভাগসমূহ</a></li>
+         <li><a href="index.html">বিষয়সমূহ</a></li>
       </ul>
       <div class="search_bar">
         <span class="material-symbols-outlined">
